# edu-backpack

./: backpack.cabal
app/: Main.hs
impl-record/: Fruit.hs
impl-tuple/: Fruit.hs
lib-baking/: Baking.hs
sig-fruit/: Fruit.hsig
